# economic-conditions-poverty-panel

./: .gitignore  README.md  pyproject.toml
data/processed/: state_year_panel.parquet
notebooks/: 00_fetch_saipe.ipynb  01_build_state_year_panel.ipynb  02_eda.ipynb  03_modeling.ipynb
