[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "economic-conditions-poverty-panel"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "matplotlib>=3.8",
  "statsmodels>=0.14",
  "scipy>=1.12",
  "openpyxl>=3.1",
  "pyarrow>=15",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0", "ipykernel>=6.29"]
